--- a/TaskTrek/appsettings.json
+++ b/TaskTrek/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskTrek;User Id=myUsername;Password=myPassword;"
+  },
   "AllowedHosts": "*"
 }
