Fixed a few errors that i missed

--- a/TaskTrek/appsettings.json
+++ b/TaskTrek/appsettings.json
@@ -6,10 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskTrek;Integrated Security=True;",
-    "Server=tcp": "tasktrek.database.windows.net",
-    "1433;Initial" "Catalog=TaskTrekDb;Encrypt=True;TrustServerCertificate=False;Connection",
-    "Timeout=30;Authentication="Active Directory Default";
+    "DefaultConnection": "Server=tcp:tasktrek.database.windows.net,1433;Initial Catalog=TaskTrekDb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
   "AllowedHosts": "*"
 }
