Added caching of nuget packages

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,16 @@ stages:
     - task: NuGetToolInstaller@1
       name: 'NuGetToolInstaller'
       displayName: 'NuGet tool installer'
+      
+      
+    - task: Cache@2
+      name: 'CacheNuGetPackages'
+      displayName: 'Cache NuGet packages'
+      inputs:
+        key: '$(nugetCacheKey)'
+        restoreKeys: |
+          nuget | $(Agent.OS)
+        path: $(USERPROFILE)\.nuget\packages
 
     - task: NuGetCommand@2
       name: 'NuGetRestore'
