--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
       inputs:
         command: 'test'
         projects: '$(solution)'
-        arguments: '--configuration $(buildConfiguration)'
+        arguments: '--configuration $(buildConfiguration) --no-build'
 
     - task: DotNetCoreCLI@2
       name: 'Publish'
